# RoboLab-Assistant.github.io

./: .gitignore  README.md  lab_boxes.scene
cv_module/: BUILD_AND_TEST.md  BUNDLE_DETECTION_IMPLEMENTATION.md  CALIBRATION_GUIDE.md  CALIBRATION_QUICKSTART.md  CAMERA_CALIBRATION_SUMMARY.md  IMPLEMENTATION_OVERVIEW.md  README.md  debug_bundle.py  package.xml  requirements.txt  setup.cfg  setup.py  test_bundle_detection.py
cv_module/config/: apriltag3_bundle.yaml  apriltag3_settings.yaml  apriltag_settings.yaml  camera_intrinsics.yaml  tags_16h5.yaml
cv_module/cv_module/nodes/: apriltag3_detector.py  bundle_tf_filter.py  camera_calibrator.py  camera_frustum_marker.py  camera_info_override.py  tag_coordinate_markers.py
cv_module/launch/: calibrate_camera.launch.py  detector_only.launch.py  full_system.launch.py  full_system_apriltag3.launch.py  offline_test.launch.py
cv_module/resource/: cv_module
cv_module/rviz/: cv_module.rviz
docs/: _config.yml  index.html
models/cuvette/: model.config  model.sdf
models/cuvette/meshes/: cuvette.stl
models/labworld/: model.config  model.sdf
models/labworld/meshes/: labworld.stl
models/labworld1/: model.config  model.sdf
models/labworld1/meshes/: labworld1.stl
simple_pick_place/: CMakeLists.txt  package.xml
simple_pick_place/src/: move_program.cpp  simple_pick_place.cpp
ur5_camera_gipper_moveit_config/: CMakeLists.txt  package.xml
ur5_camera_gipper_moveit_config/config/: ur.srdf  ur.urdf.xacro
ur5_camera_gipper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_yt_sim/: CMakeLists.txt  box1.scene  box2.scene  package.xml
ur_yt_sim/launch/: bringup.launch.py  load_env_only.launch.py  spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper.launch.py  view_ur5_camera.launch.py  view_ur5_camera_gripper.launch.py
ur_yt_sim/urdf/: ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro
ur_yt_sim/worlds/: my_lab.world
