<?xml version="1.0"?>
<package format="3">
  <name>cv_module</name>
  <version>0.1.0</version>
  <description>AprilTag-based CV module for D435 RGB with bundle centroid TF, RViz/rqt visualisation.</description>
  <maintainer email="you@example.com">Capstone Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>python3-dt-apriltags</exec_depend>

  <!-- External runtime deps -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
